@@ -95,10 +95,10 @@ if (isproxy())
 
 $secret = mksecret();
 $wantpasshash = md5($secret . $wantpassword . $secret);
-$editsecret = (!$arr[0]?"":mksecret());
+$editsecret = (!$arr[0]?"": ENA_EMAIL_CONFIRM?mksecret():"");
 
 $ret = mysql_query("INSERT INTO users (username, passhash, secret, editsecret, email, status, ". (!$arr[0]?"class, ":"") ."added) VALUES (" .
-		implode(",", array_map("sqlesc", array($wantusername, $wantpasshash, $secret, $editsecret, $email, (!$arr[0]?'confirmed':'pending')))).
+		implode(",", array_map("sqlesc", array($wantusername, $wantpasshash, $secret, $editsecret, $email, (!$arr[0] || !ENA_EMAIL_CONFIRM?'confirmed':'pending')))).
 		", ". (!$arr[0]?UC_SYSOP.", ":""). "'". get_date_time() ."')");
 
 if (!$ret) {
@@ -129,11 +129,11 @@ do this, you account will be deleted within a few days. We urge you to read
 the RULES and FAQ before you start using torrentbits.
 EOD;
 
-if($arr[0])
+if($arr[0] || ENA_EMAIL_CONFIRM)
   mail($email, "$SITENAME user registration confirmation", $body, "From: $SITEEMAIL", "-f$SITEEMAIL");
 else 
   logincookie($id, $wantpasshash);
 
-header("Refresh: 0; url=ok.php?type=". (!$arr[0]?"sysop":("signup&email=" . urlencode($email))));
+header("Refresh: 0; url=ok.php?type=". (!$arr[0]?"sysop": ENA_EMAIL_CONFIRM ? ("signup&email=" . urlencode($email)):"confirm"));
 
 ?>
