@@ -1,3 +1,5 @@
+2006-02-18 - Laffin - Fixed announce.php passkeys locked to ip's
+             Laffin - Added 'Use Email Confirmation' to admincp.php, takesignup.php, ok.php
 2006-01-18 - Triton - edited message line 190 in admincp
 2006-01-17 - Triton - fixed bittorrent.php in include/config.php missing include/
 2006-01-17 - laffin - fixed admincp true/false checkbox entries. Thanx Cronner for finding this bug
